# PyAI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pyai/: __init__.py  __main__.py  localModel.py  marqoDb.py
